--- a/goro/build.gradle
+++ b/goro/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
+apply from: file("$rootDir/gradle/android-maven.gradle")
 
 group = 'com.stanfy.enroscar'
 version = '3.0.0-SNAPSHOT'
-archivesBaseName = 'enroscar-goro'
 
 android {
   compileSdkVersion project.androidCompileSdkVersion
