--- a/goro/build.gradle
+++ b/goro/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 apply from: file("$rootDir/gradle/android-maven.gradle")
 
 group = 'com.stanfy.enroscar'
-version = '3.0.0-SNAPSHOT'
+version = '3.0.0-RC1'
 
 android {
   compileSdkVersion project.androidCompileSdkVersion
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-  provided 'com.stanfy.enroscar:enroscar-async-interface:2.0-RC2-SNAPSHOT'
+  provided 'com.stanfy.enroscar:enroscar-async-interface:2.0-RC2'
   provided 'io.reactivex:rxjava:1.0.13'
 
   def testDeps = [
