--- a/goro/build.gradle
+++ b/goro/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 apply from: file("$rootDir/gradle/android-maven.gradle")
 
 group = 'com.stanfy.enroscar'
-version = '3.0.0-RC1'
+version = '3.0.0-SNAPSHOT'
 
 android {
   compileSdkVersion project.androidCompileSdkVersion
@@ -25,10 +25,6 @@ android {
     exclude 'NOTICE'
     exclude 'asm-license.txt'
   }
-}
-
-repositories {
-  maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
