--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,15 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.3'
-    classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
-    classpath 'com.stanfy.android:gradle-android-apt:1.0.0'
+    classpath 'com.android.tools.build:gradle:2.1.2'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
   }
 }
 
 ext {
-  androidCompileSdkVersion = 22
-  androidBuildToolsVersion = '22.0.1'
-  androidTargetSdkVersion = 22
+  androidCompileSdkVersion = 23
+  androidBuildToolsVersion = '23.0.3'
+  androidTargetSdkVersion = 23
 }
 
 subprojects {
