--- a/goro/src/main/AndroidManifest.xml
+++ b/goro/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <service
         android:name=".GoroService"
+        android:enabled="false"
         android:exported="false" />
 
   </application>
