--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - adb shell input keyevent 82
 
 script:
-  - ./gradlew --continue check
+  - ./gradlew --continue check || cat /home/travis/build/stanfy/goro/goro/build/outputs/lint-results-debug.xml
   - ./gradlew conCheck
 
 after_success:
