--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: android
 android:
   components:
   - tools
+  - platform-tools
   - build-tools-23.0.3
   - android-23
   - extra-android-m2repository
@@ -17,11 +18,11 @@ install:
 before_script:
   - echo no | android create avd --force -n test -t android-15 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82
 
 script:
-  - ./gradlew --continue check || cat /home/travis/build/stanfy/goro/goro/build/outputs/lint-results-debug.xml
+  - ./gradlew --continue check
+  - android-wait-for-emulator
+  - adb shell input keyevent 82
   - ./gradlew conCheck
 
 after_success:
