--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
   components:
   - tools
   - platform-tools
+  - tools
   - build-tools-27.0.3
   - android-22
   - android-27
@@ -41,7 +42,6 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
 
 env:
   global:
