--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
   components:
   - tools
   - platform-tools
+  - tools
   - build-tools-27.0.3
   - android-22
   - android-27
@@ -12,6 +13,12 @@ android:
 
 jdk:
   - oraclejdk8
+
+# It seems Google uploaded a new version of the android-27 package 
+# and the checksum is now different and the download fails.
+# https://github.com/travis-ci/travis-ci/issues/8874
+before_install:
+- yes | sdkmanager "platforms;android-27"
 
 install:
   - ./gradlew clean assemble
@@ -41,7 +48,6 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
 
 env:
   global:
